ingress/traefik-home-assistant-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-assistant-redirect-https
  namespace: home-assistant
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-http
  namespace: home-assistant
spec:
  entryPoints: ["web"]
  routes:
    - match: Host(`home-assistant.seadogger-homelab`)
      kind: Rule
      middlewares:
        - name: home-assistant-redirect-https
      services:
        - name: home-assistant
          port: 8080

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-https
  namespace: home-assistant
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`home-assistant.seadogger-homelab`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8080
  tls:
    secretName: home-assistant-local-tls
