ingress/traefik-n8n-ingress.yml
# HTTP: catch and redirect to HTTPS
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: n8n
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
# HTTP: catch and redirect to HTTPS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-http
  namespace: n8n
spec:
  entryPoints: ["web"]
  routes:
    - match: Host(`n8n.seadogger-homelab`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: n8n
          port: 5678

---
# HTTPS: real route with TLS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-https
  namespace: n8n
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`n8n.seadogger-homelab`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls:
    secretName: n8n-local-tls
