ingress/traefik-pihole-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: pihole
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-http
  namespace: pihole
spec:
  entryPoints: ["web"]
  routes:
    - match: Host(`pihole.seadogger-homelab`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: pihole-web   # If your Service is actually named 'pihole', change this to 'pihole'
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-https
  namespace: pihole
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`pihole.seadogger-homelab`)
      kind: Rule
      services:
        - name: pihole-web   # If your Service is actually named 'pihole', change this to 'pihole'
          port: 80
  tls:
    secretName: pihole-local-tls
